@@ -15,6 +15,9 @@
 #	logfile      - What file to read in logdir
 #
 # $Log$
+# Revision 1.6.2.1  2005/01/24 19:44:13  jimmyo
+# Changed default log for generic/postfix_mailstats from syslog to mail.log. Downgraded it from auto to manual.
+#
 # Revision 1.6  2004/12/10 18:51:43  jimmyo
 # linux/apt* has been forced to LANG=C, to get predictable output.
 #
@@ -53,7 +56,7 @@
 # Magic markers (optional - used by munin-config and some installation
 # scripts):
 #
-#%# family=auto
+#%# family=manual
 #%# capabilities=autoconf
 
 my $statefile = "@@PLUGSTATE@@/munin-plugin-postfix_mailstats.state";
@@ -61,7 +64,7 @@ my $pos   = undef;
 my $delivered = 0;
 my $rejects = {};
 my $LOGDIR  = $ENV{'logdir'}  || '/var/log';
-my $LOGFILE = $ENV{'logfile'} || 'syslog';
+my $LOGFILE = $ENV{'logfile'} || 'mail.log';
 
 
 if ( $ARGV[0] and $ARGV[0] eq "autoconf" )
